In convert_takeout:  - Merge functions _from_divs_to_dict and get_all_records into one as  they make little sense as separate ones  - use the 'default' parameter of json.dump for converting timestamps  to strings when saving records from get_all_records to a JSON file  instead of deepcopying the records' dict and converting all its  timestamps via looping
 In takeout_help.html:
  - Slight revisions and clarifications in documentation

--- a/templates/help/takeout_help.html
+++ b/templates/help/takeout_help.html
@@ -66,9 +66,9 @@
         </p>
         <h4>Timestamps</h4>
         <p>
-            In short, the timestamps are not accurate, just like the overall YouTube Takeout data, and aren't
-            processed accurately by the app, either. They shouldn't be relied on for anything precise, but would work
-            fine for a rough overview of activity over a given period of time, etc.
+            In short, the timestamps can be very inaccurate and the app doesn't fix that.
+            They shouldn't be relied on for anything precise, but would work fine for a rough overview of activity over
+            a given period of time, etc.
         </p>
         <p>
             There is no timezone information beyond abbreviations like EDT/PST/CET and so on.
@@ -90,9 +90,9 @@
             there may be duplicate timestamps in different timezones. To weed out the duplicates, any timestamps for
             the same video ID that have been watched at the same year, month, minute and second as well as less than
             26 hours apart are treated as one. This may also block a limited amount of legitimate timestamps from being
-            entered. Most of them would be the ones attached to records with no ID info whatsoever.
-            Considering the records returned by Takeout are not complete as is, 1-10 (3 unknown ones for me personally)
-            extra lost timestamps seemed like an good trade-off.
+            entered. Most if not all of them would be the ones attached to the 'unknown' record.
+            Considering the records returned by Takeout are not complete as is, a few (7 unknown ones for me) extra lost
+            timestamps seemed like a good trade-off.
         </p>
     </div>
     <script>
