In convert_takeout.py:  - Allow get_watch_history_files to retrieve files when the provided  path points to a file itself or to a directory with multiple files,  in addition to the currently allowed directory with multiple Takeout  archive directories. Adjust the text describing those options on the  index page.  - Change how the timezone abbreviation is truncated from the timestamp  in case it's longer or shorter than 3 characters
In takeout_help.html:
 - Add a warning about non-English Takeout and possibly older Takeout
 not being parsable

--- a/templates/help/takeout_help.html
+++ b/templates/help/takeout_help.html
@@ -16,6 +16,22 @@
         </p>
     </div>
     <div class="help-item">
+        <h2>Restrictions</h2>
+        <p>
+            Only Takeout files in English can be parsed. Adjusting code in src/convert_takeout.py
+            (functions get_watch_history_files and get_all_records) could get it to work with another language.
+            Alternatively, switching your language to English
+            <a class="link-btn link-btn:visited"
+               href="https://myaccount.google.com/language?utm_source=google-account&utm_medium=web"
+               target="_blank">here</a> should make the Takeout archives created afterwards be in English.
+        </p>
+        <p>
+            It's possible the format of watch-history.html files used to be different in the past, in which case those
+            would likely not be parsable either. If that happens, open an issue on GitHub and I'll see about making
+            it work.
+        </p>
+    </div>
+    <div class="help-item">
         <h2>Data retrieval and insertion</h2>
         <p>
             Takeout's watch-history.html file(s) gets parsed for the available info. Some records will only contain a
