*rebased* The main purpose of this commit - giving the user ability  to adjust the max time difference timedelta used in the process of  weeding out duplicate timestamps, was abandoned halway through.  However, some of the index.html layout changes were still used,  and they were kept, though it was believed the commit itself  was gone, due to use of reset and stash

--- a/templates/help/takeout_help.html
+++ b/templates/help/takeout_help.html
@@ -1,5 +1,4 @@
-    <a href="#" id="takeout-help-link" class="link-btn">How this works{{ ':' if description or not db else '...' }}</a>
-<div id="takeout-help" class="{{ '' if description or not db else 'hidden' }}">
+<div id="takeout-help">
     <hr>
     <div class="help-item">
         <h2>The goal of the app</h2>
