--- a/templates/help/takeout_help.html
+++ b/templates/help/takeout_help.html
@@ -5,29 +5,13 @@
         <p>is to gather some data about your YouTube watch history and do some light visualization of it.
             There's a few interactive graphs and tables on the Visualize page, and then there's the data itself that
             could be used for more.
-            An SQLite browser
-            (ex. <a class="link-btn link-btn:visited" href="https://sqlitebrowser.org/" target="_blank"
-            >DB Browser for SQLite</a>) could be used for exploring the data and making simple graphs as well.
+            An SQLite browser, such as
+            <a class="link-btn link-btn:visited" href="https://sqlitebrowser.org/" target="_blank"
+            >DB Browser for SQLite</a>, could be used for exploring the data and making simple graphs as well.
         </p>
         <p>
             This is not a tool for exhaustive data gathering and record keeping. Even if it tried to be,
             inaccuracies of Takeout data would not allow for that (read below to see why).
-        </p>
-    </div>
-    <div class="help-item">
-        <h2>Restrictions</h2>
-        <p>
-            Only Takeout files in English can be parsed. Adjusting code in src/convert_takeout.py
-            (functions get_watch_history_files and get_all_records) could get it to work with another language.
-            Alternatively, switching your language to English
-            <a class="link-btn link-btn:visited"
-               href="https://myaccount.google.com/language?utm_source=google-account&utm_medium=web"
-               target="_blank">here</a> should make the Takeout archives created afterwards be in English.
-        </p>
-        <p>
-            It's possible the format of watch-history.html files used to be different in the past, in which case those
-            would likely not be parsable either. If that happens, open an issue on GitHub and I'll see about making
-            it work.
         </p>
     </div>
     <div class="help-item">
@@ -75,30 +59,31 @@
             when compared to the History page on Youtube, though the difference wasn't drastic. Curiously, the
             History page was also missing some videos that were present in Takeout.
         </p>
-        <h4>Timestamps</h4>
+        <h4 id="timestamps-explanation">Timestamps</h4>
         <p>
             In short, the timestamps can be very inaccurate and the app doesn't fix that.
             They shouldn't be relied on for anything precise, but would work fine for a rough overview of activity over
             a given period of time, etc.
         </p>
         <p>
-            There is no timezone information beyond coming from Takeout beyond abbreviations like EDT/PST/CET and so on.
+            There is no timezone information coming from Takeout beyond abbreviations like EDT/PST/CET, some of which
+            may refer to multiple different timezones.
             The timestamps seem to be returned in local time of the computer the Takeout archive creation
-            was initiated on (including those for videos that may have been watched in a different timezone).
+            was initiated on (including those for videos that were watched in a different timezone).
             However, changing the timezone on my machine never triggered a change in the timestamps, so it's probably
             more complicated than that.
         </p>
         <p>
             In the case of zones observing Daylight Saving Time (DST), all of the timestamps seem to be set to
             either the DST timezone or the non-DST one, depending on the date the archive was created. That
-            is, if someone who lives on the East coast of US creates an archive in May, all the timestamps, including
-            ones that should be in EST (November - March) will be set to EDT and vice versa if it gets created in
+            is, if someone who lives on the East coast of US created an archive in May, all the timestamps, including
+            ones that should be in EST (November - March) would be set to EDT and vice versa if it were created in
             February.
         </p>
-        <h4>Duplicate timestamps because of potential different timezones for different Takeout archives</h4>
+        <h4>Avoiding duplicate timestamps because of potential different timezones for different Takeout archives</h4>
         <p>
             Since different Takeout archives may have different timezones, depending on when/where they were downloaded,
-            there may be duplicate timestamps in different timezones. To weed out the duplicates, any timestamps for
+            there may be duplicate timestamps in different timezones. To weed out them out, any timestamps for
             the same video ID that have been watched at the same year, month, minute and second as well as less than
             26 hours apart are treated as one. This may also block a limited amount of legitimate timestamps from being
             entered. Most if not all of them would be the ones attached to the 'unknown' record.
@@ -106,8 +91,4 @@
             timestamps seemed like a good trade-off.
         </p>
     </div>
-    <script>
-        toggleElementVisibility("takeout-help-link", "takeout-help",
-            "How this works{{ '...' if description or not db else ':' }}");
-    </script>
 </div>
