In index.html:  - Make 'Update existing records' button into a form with fields that  allow setting the cutoff time for age of video records in the database,  i.e. specifying to only query YT API for updates on videos older than  whatever value is sent through the form; write accompanying code on the  front- and backends  - Set cookies for the takeout directory path and cutoff values, set as  defaults on page load
In takeout_help.html:
 - Change the part describing what failed to trigger a change in
 timestamps and what seems to determine their timezone

In manage_records/views:
 - Refactor _show_end_front_end_data to _show_front_end_data

--- a/static/main.css
+++ b/static/main.css
@@ -66,11 +66,19 @@ form {
     padding: 20px 0;
 }
 
-#takeout-form, #switch-project-form {
+#takeout-form, #switch-project-form, #update-form {
     display: flex;
     align-items: center;
     justify-content: center;
     height: 70px;
+}
+
+#update-form * {
+    margin: 0 4px;
+}
+
+#update-form input[type='submit'] {
+    margin-left: 145px;
 }
 
 form>span {
@@ -79,6 +87,10 @@ form>span {
     justify-content: space-between;
     width: 80%;
     padding: 2px 0;
+}
+
+#update-cutoff-input {
+    width: 50px;
 }
 
 #new-project-submit-button {
@@ -144,7 +156,7 @@ h1, h2, h3, h4{
     opacity: 0.3;
 }
 
-input, .button, .button-cancel {
+input, .button, .button-cancel, #update-cutoff-periods {
     height: 30px;
     border: 1px solid lightgray;
 }
