--- a/templates/help/takeout_help.html
+++ b/templates/help/takeout_help.html
@@ -1,5 +1,4 @@
 <div id="takeout-help">
-    <hr>
     <div class="help-item">
         <h2>The goal of the app</h2>
         <p>is to gather some data about your YouTube watch history and do some light visualization of it.
@@ -68,10 +67,10 @@
         <p>
             There is no timezone information coming from Takeout beyond abbreviations like EDT/PST/CET, some of which
             may refer to multiple different timezones.
-            The timestamps seem to be returned in local time of the computer the Takeout archive creation
-            was initiated on (including those for videos that were watched in a different timezone).
-            However, changing the timezone on my machine never triggered a change in the timestamps, so it's probably
-            more complicated than that.
+            The timestamps seem to be returned in local time of what's used to browse YouTube (or perhaps use Google
+            products in general), including those for videos that were watched in a different timezone.
+            However, temporarily changing the timezone on my PC or in Google Calendar or the region in Google Search
+            Settings never triggered a change in the timestamps.
         </p>
         <p>
             In the case of zones observing Daylight Saving Time (DST), all of the timestamps seem to be set to
