In new_project\views:  - change the endpoint for the index page from 'index' to  'records.index'; crashed otherwise as it hasn't been updated since  the index route was moved from main.py into a blueprint
Remove some:
 print statements, commented out code, unused code

--- a/templates/help/takeout_help.html
+++ b/templates/help/takeout_help.html
@@ -69,15 +69,15 @@
             may refer to multiple different timezones.
             The timestamps seem to be returned in local time of what's used to browse YouTube (or perhaps use Google
             products in general), including those for videos that were watched in a different timezone.
-            However, temporarily changing the timezone on my PC or in Google Calendar or the region in Google Search
+            However, temporarily changing the timezone on my PC, or in Google Calendar, or the region in Google Search
             Settings never triggered a change in the timestamps.
         </p>
         <p>
-            In the case of zones observing Daylight Saving Time (DST), all of the timestamps seem to be set to
-            either the DST timezone or the non-DST one, depending on the date the archive was created. That
-            is, if someone who lives on the East coast of US created an archive in May, all the timestamps, including
-            ones that should be in EST (November - March) would be set to EDT and vice versa if it were created in
-            February.
+            One of the worse things happens with DST zones. In the case of zones observing Daylight Saving Time (DST),
+            all of the timestamps seem to be set to either the DST timezone or the non-DST one, depending on the date
+            the archive was created. That is, if someone who lives on the East coast of US were to create an archive in
+            May, all the timestamps, including ones that should be in EST (November - March) would be set to EDT, and
+            vice versa if it were created in February.
         </p>
         <h4>Avoiding duplicate timestamps because of potential different timezones for different Takeout archives</h4>
         <p>
