--- a/templates/index.html
+++ b/templates/index.html
@@ -7,10 +7,10 @@
     <div id="project-section">
         {% include "flash_messages.html" %}
         <div class="project-dir-path">
-            Project directory: <span class="path">{{ path }}</span>
+            Project directory: <span class="project-path">{{ path }}</span>
         </div>
     </div>
-    <div id="all-buttons">
+    <div id="index-top-buttons">
         <div id="takeout-buttons">
             <button id="takeout-cancel-button" class="button-cancel" disabled>Stop</button>
         </div>
