--- a/templates/new_project.html
+++ b/templates/new_project.html
@@ -5,12 +5,12 @@
 {% block body %}
         {% if path %}
             <div class="project-dir-path">
-                Current directory: <span class="path">{{ path }}</span>
+                Current directory: <span class="project-path">{{ path }}</span>
             </div>
         {% endif %}
         <h1>Set up a project</h1>
         <div>
-            <div id="project-buttons">
+            <div id="new-project-buttons">
                 <button id="setup-project-button" class="button">New</button>
                 <button id="switch-project-button" class="button">Switch to</button>
             </div>
