--- a/templates/help/setup_project_help.html
+++ b/templates/help/setup_project_help.html
@@ -1,4 +1,4 @@
-<div id="help-container">
+<div id="new-project-help-container">
     <div class="help-item">
         <h3>Directory path</h3>
         <p>The directory in which all the data will be stored.</p>
