--- a/templates/help/takeout_help.html
+++ b/templates/help/takeout_help.html
@@ -2,29 +2,29 @@
     <div class="help-item">
         <h2>The goal of the app</h2>
         <p>is to gather some data about your YouTube watch history and do some light visualization of it.
-            There's a few interactive graphs and tables on the Visualize page, and then there's the data itself that
-            could be used for more.
+            There's a few interactive graphs and tables on the Visualize page, and then there's the data itself.
             An SQLite browser, such as
             <a class="link-btn link-btn:visited" href="https://sqlitebrowser.org/" target="_blank"
-            >DB Browser for SQLite</a>, could be used for exploring the data and making simple graphs as well.
+            >DB Browser for SQLite</a>, could be used for viewing and filtering the data like a spreadsheet, as well as
+            making simple graphs.
         </p>
         <p>
-            This is not a tool for exhaustive data gathering and record keeping. Even if it tried to be,
-            inaccuracies of Takeout data would not allow for that (read below to see why).
+            This is not a tool for exhaustive data gathering/archiving and records keeping. Even if it tried to be,
+            inaccuracies in Takeout would not allow for that (read below to see why).
         </p>
     </div>
     <div class="help-item">
-        <h2>Data retrieval and insertion</h2>
+        <h2>Data retrieval and insertion process</h2>
         <p>
             Takeout's watch-history.html file(s) gets parsed for the available info. Some records will only contain a
-            timestamp of when the video was opened/watched, presumably when the video itself is no longer available.
+            timestamp of when the video was opened, presumably when the video itself is no longer available.
             Most will also contain the video ID, title and the channel title.
         </p>
         <p>
-            All the IDs are then queried against YouTube Data API for additional information. Combined with the
-            timestamps from Takeout, the records are then inserted into a database, located in the project directory
-            under the default name of yt.sqlite. Those without identifying info are collectively inserted
-            as a single 'unknown'.
+            All the video IDs are then queried against YouTube Data API for additional information such as likes,
+            tags, number of comments, etc. Combined with the timestamps from Takeout, the records are then inserted into
+            a database, located in the project directory under the default name of yt.sqlite. Those without any
+            identifying info are collectively inserted as a single 'unknown'.
         </p>
         <p>
             Each successful query to the API uses 11 points, with the standard daily quota being 1M.
@@ -36,9 +36,7 @@
         </p>
         <p>
             Should the process get interrupted for any reason, it's safe to restart it using the same Takeout
-            files; no duplicates will be created and no duplicate queries will be made (except 1 every time). It's best
-            not to re-use the same files after their records have been fully inserted, however, as that slows down the
-            process for no good reason.
+            files; no duplicates will be created and no duplicate queries will be made (except 1 every time).
         </p>
     </div>
     <div class="help-item">
@@ -47,7 +45,8 @@
             Takeout works strangely (badly). The first three times I've used it, varying numbers of records were
             returned each time. The second time returned fewer than the first and the last returned more than the
             first two, including records older than the ones in the first two as well as additional records
-            throughout the whole watch history. The next few I paid attention to also varied in the amount returned.
+            throughout the whole watch history. The next few I paid attention to also varied in the amount returned in
+            a similar manner.
         </p>
         <p>
             The oldest records were from April of 2014, with the Youtube account having been created and first
@@ -58,7 +57,7 @@
             when compared to the History page on Youtube, though the difference wasn't drastic. Curiously, the
             History page was also missing some videos that were present in Takeout.
         </p>
-        <h4 id="timestamps-explanation">Timestamps</h4>
+        <h4>Timestamps</h4>
         <p>
             In short, the timestamps can be very inaccurate and the app doesn't fix that.
             They shouldn't be relied on for anything precise, but would work fine for a rough overview of activity over
@@ -77,7 +76,7 @@
             all of the timestamps seem to be set to either the DST timezone or the non-DST one, depending on the date
             the archive was created. That is, if someone who lives on the East coast of US were to create an archive in
             May, all the timestamps, including ones that should be in EST (November - March) would be set to EDT, and
-            vice versa if it were created in February.
+            vice versa if they were to create it in February.
         </p>
         <h4>Avoiding duplicate timestamps because of potential different timezones for different Takeout archives</h4>
         <p>
