In dash_layout:  - in construct_v_scatter:   - use Scattergl instead of Scatter for constructing graphs with 1k+   channels, add mousing over and zoom functionality back to the graphs,   as well as customData to allow showing a summary for a moused over   data point   - use round() instead of // for more accurate tick text values when   one of the axes is set to Duration
 - revise comments/docstrings
 - Add a message about loading the graphs to a graph's header, removed
 once that graph actually loads. Since the initial load may take a few
 seconds, this is used to prevent a new user of thinking something is
 wrong
 - change background color of the vis page to white, use 1px lightgray
 borders (same as around forms on other pages) around graphs for
 emphasis instead

In index.html, set font to Verdana to match the vis page

--- a/static/main.css
+++ b/static/main.css
@@ -8,6 +8,10 @@ body {
     width: 60%;
 }
 
+body > * {
+    font-family: "Open Sans", verdana, arial, sans-serif ;
+}
+
 input, select, textarea, button {
     font-family: inherit;
     font-size: inherit;
