--- a/youtubewatched/templates/help/takeout_help.html
+++ b/youtubewatched/templates/help/takeout_help.html
@@ -1,92 +1,49 @@
-<div id="takeout-help">
-    <div class="help-item">
-        <h2>The goal of the app</h2>
-        <p>is to gather some data about your YouTube watch history and do some light visualization of it.
-            There's a few interactive graphs and tables on the Visualize page, and then there's the data itself.
-            An SQLite browser, such as
-            <a class="link-btn link-btn:visited" href="https://sqlitebrowser.org/" target="_blank"
-            >DB Browser for SQLite</a>, could be used for viewing and filtering the data like a spreadsheet, as well as
-            making simple graphs.
-        </p>
-        <p>
-            This is not a tool for exhaustive data gathering/archiving and records keeping. Even if it tried to be,
-            inaccuracies in Takeout would not allow for that (read below to see why).
-        </p>
-    </div>
-    <div class="help-item">
-        <h2>Data retrieval and insertion process</h2>
-        <p>
-            Takeout's watch-history.html file(s) gets parsed for the available info. Some records will only contain a
-            timestamp of when the video was opened, presumably when the video itself is no longer available.
-            Most will also contain the video ID, title and the channel title.
-        </p>
-        <p>
-            All the video IDs are then queried against YouTube Data API for additional information such as likes,
-            tags, number of comments, etc. Combined with the timestamps from Takeout, the records are then inserted into
-            a database, located in the project directory under the default name of yt.sqlite. Those without any
-            identifying info are collectively inserted as a single 'unknown'.
-        </p>
-        <p>
-            Each successful query to the API uses 11 points, with the standard daily quota being 1M.
-            The Quotas tab on Google's
-            <a class="link-btn link-btn:visited"
-               href="https://console.developers.google.com/apis/api/youtube.googleapis.com/overview"
-               target="_blank">Console</a>
-            page will show how many have been used up.
-        </p>
-        <p>
-            Should the process get interrupted for any reason, it's safe to restart it using the same Takeout
-            files; no duplicates will be created and no duplicate queries will be made (except 1 every time).
-        </p>
-    </div>
-    <div class="help-item">
-        <h2>Takeout quirks and data accuracy</h2>
-        <p>
-            Takeout works strangely (badly). The first three times I've used it, varying numbers of records were
-            returned each time. The second time returned fewer than the first and the last returned more than the
-            first two, including records older than the ones in the first two as well as additional records
-            throughout the whole watch history. The next few I paid attention to also varied in the amount returned in
-            a similar manner.
-        </p>
-        <p>
-            The oldest records were from April of 2014, with the Youtube account having been created and first
-            used sometime in 2011.
-        </p>
-        <p>
-            In addition to that, all the archives were missing some amount of records for each year they did cover,
-            when compared to the History page on Youtube, though the difference wasn't drastic. Curiously, the
-            History page was also missing some videos that were present in Takeout.
-        </p>
-        <h4>Timestamps</h4>
-        <p>
-            In short, the timestamps can be very inaccurate and the app doesn't fix that.
-            They shouldn't be relied on for anything precise, but would work fine for a rough overview of activity over
-            a given period of time, etc.
-        </p>
-        <p>
-            There is no timezone information coming from Takeout beyond abbreviations like EDT/PST/CET, some of which
-            may refer to multiple different timezones.
-            The timestamps seem to be returned in local time of what's used to browse YouTube (or perhaps use Google
-            products in general), including those for videos that were watched in a different timezone.
-            However, temporarily changing the timezone on my PC, or in Google Calendar, or the region in Google Search
-            Settings never triggered a change in the timestamps.
-        </p>
-        <p>
-            One of the worse things happens with DST zones. In the case of zones observing Daylight Saving Time (DST),
-            all of the timestamps seem to be set to either the DST timezone or the non-DST one, depending on the date
-            the archive was created. That is, if someone who lives on the East coast of US were to create an archive in
-            May, all the timestamps, including ones that should be in EST (November - March) would be set to EDT, and
-            vice versa if they were to create it in February.
-        </p>
-        <h4>Avoiding duplicate timestamps because of potential different timezones for different Takeout archives</h4>
-        <p>
-            Since different Takeout archives may have different timezones, depending on when/where they were downloaded,
-            there may be duplicate timestamps in different timezones. To weed out them out, any timestamps for
-            the same video ID that have been watched at the same year, month, minute and second as well as less than
-            26 hours apart are treated as one. This may also block a limited amount of legitimate timestamps from being
-            entered. Most if not all of them would be the ones attached to the 'unknown' record.
-            Considering the records returned by Takeout are not complete as is, a few (7 unknown ones for me) extra lost
-            timestamps seemed like a good trade-off.
-        </p>
-    </div>
-</div>
+<h2 id="the-goal-of-the-app">The goal of the app</h2>
+<p>is to gather some data about your YouTube watch history and do some light visualization of it. There&#39;s a few
+interactive graphs and tables on the Visualize page, and then there&#39;s the data itself. An SQLite browser, such as <a href="https://sqlitebrowser.org/">DB
+ Browser for SQLite</a>, could be used for viewing and filtering the data like a
+ spreadsheet, as well as making simple graphs.</p>
+<p>This is not a tool for exhaustive data gathering/archiving and records keeping. Even if it tried to be, inaccuracies in
+Takeout would not allow for that (read below to see why).</p>
+<h2 id="data-retrieval-and-insertion-process">Data retrieval and insertion process</h2>
+<p>Takeout&#39;s watch-history.html file(s) gets parsed for the available info. Some records will only contain a timestamp of
+when the video was opened, presumably when the video itself is no longer available. Most will also contain the video ID,
+ title and the channel title.</p>
+<p>All the video IDs are then queried against YouTube Data API for additional information such as likes, tags, number of
+comments, etc. Combined with the timestamps from Takeout, the records are then inserted into a database, located in the
+project directory under the default name of yt.sqlite. Those without any identifying info are collectively inserted as a
+ single &#39;unknown&#39;.</p>
+<p>Each successful query to the API uses 11 points, with the standard daily quota being 1M.
+The <a href="https://console.developers.google.com/apis/api/youtube.googleapis.com/overview">Quotas</a> tab on Google&#39;s
+Console page will show how many have been used up.</p>
+<p>Should the process get interrupted for any reason, it&#39;s safe to restart it using the same Takeout files; no duplicates
+will be created and no duplicate queries will be made (except 1 every time).</p>
+<h2 id="takeout-quirks-and-data-accuracy">Takeout quirks and data accuracy</h2>
+<p>Takeout works strangely (badly). The first three times I&#39;ve used it, varying numbers of records were returned each time.
+The second time returned fewer than the first and the last returned more than the first two, including records older
+than the ones in the first two as well as additional records throughout the whole watch history.
+The next few I paid attention to also varied in the amount returned in a similar manner.</p>
+<p>The oldest records were from April of 2014, with the Youtube account having been created and first used sometime in 2011.</p>
+<p>In addition to that, all the archives were missing some amount of records for each year they did cover, when compared
+to the History page on Youtube, though the difference wasn&#39;t drastic. Curiously, the History page was also missing some
+videos that were present in Takeout.</p>
+<h4 id="timestamps">Timestamps</h4>
+<p>In short, the timestamps can be very inaccurate and the app doesn&#39;t fix that. They shouldn&#39;t be relied on for anything
+precise, but would work fine for a rough overview of activity over a given period of time, etc.</p>
+<p>There is no timezone information coming from Takeout beyond abbreviations like EDT/PST/CET, some of which may refer to
+multiple different timezones. The timestamps seem to be returned in local time of what&#39;s used to browse YouTube
+(or perhaps use Google products in general), including those for videos that were watched in a different timezone.
+However, temporarily changing the timezone on my PC, or in Google Calendar, or the region in Google Search Settings
+never triggered a change in the timestamps.</p>
+<p>One of the worse things happens with DST zones. In the case of zones observing Daylight Saving Time (DST), all of the
+timestamps seem to be set to either the DST timezone or the non-DST one, depending on the date the archive was created.
+That is, if someone who lives on the East coast of US were to create an archive in May, all the timestamps, including
+ones that should be in EST (November - March) would be set to EDT, and vice versa if they were to create it in February.</p>
+<h4 id="avoiding-duplicate-timestamps-because-of-potential-different-timezones-for-different-takeout-archives">Avoiding duplicate timestamps because of potential different timezones for different Takeout archives</h4>
+<p>Since different Takeout archives may have different timezones, depending on when/where they were downloaded, there may
+be duplicate timestamps in different timezones. To weed out them out, any timestamps for the same video ID that have
+been watched at the same year, month, minute and second as well as less than 26 hours apart are treated as one. This may
+ also block a limited amount of legitimate timestamps from being entered. Most if not all of them would be the ones
+ attached to the &#39;unknown&#39; record. Considering the records returned by Takeout are not complete as is, a few
+ (7 unknown ones for me) extra lost timestamps seemed like a good trade-off.</p>
+
