- Remove a couple of unused classes from html files  - Add another URL on the new project page to a guide on how to set up  the API access

--- a/youtubewatched/templates/help/setup_project_help.html
+++ b/youtubewatched/templates/help/setup_project_help.html
@@ -8,9 +8,8 @@
         <h3>Google API key</h3>
         <p>
             For making requests to Youtube Data API for information on each video
-            <a class="link-btn link-btn:visited"
-               href="https://support.google.com/googleapi/answer/6158862?hl=en"
-               target="_blank">(how to get one)</a>.
+            (<a href="https://developers.google.com/youtube/v3/getting-started" target="_blank">how</a> to get
+            <a href="https://support.google.com/googleapi/answer/6158862?hl=en" target="_blank">one</a>).
         </p>
     </div>
 </div>
